tests/paczka1/small_fuzzy/76281276.err
Error in line 9: S3 S466 6,6
Error in line 7: W0W S466 58,6
Error in line 4: M5ULESp2v4 A485 15,2
Error in line 16: S3 S466 18,4
